--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -9,7 +9,18 @@
     "type": "git",
     "url": "git+https://github.com/Chapabu/chapabu.codes.git"
   },
+  "scripts": {
+    "fractal": "fractal"
+  },
   "bugs": {
     "url": "https://github.com/Chapabu/chapabu.codes/issues"
+  },
+  "devDependencies": {
+    "@frctl/fractal": "^1.2.0",
+    "@frctl/nunjucks": "^2.0.1",
+    "@frctl/twig": "^1.0.0-beta.5",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0"
   }
 }
