--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -10,7 +10,8 @@
     "url": "git+https://github.com/Chapabu/chapabu.codes.git"
   },
   "scripts": {
-    "fractal": "fractal"
+    "fractal": "fractal",
+    "start": "fractal start"
   },
   "bugs": {
     "url": "https://github.com/Chapabu/chapabu.codes/issues"
@@ -21,6 +22,7 @@
     "@frctl/twig": "^1.0.0-beta.5",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0"
+    "eslint-config-prettier": "^6.3.0",
+    "mono-fractal": "^1.0.0"
   }
 }
