--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "author": "Matt Chapman <chapabu101@gmail.com>",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/normalize.css"
+    ]
+  },
   "devDependencies": {
     "lerna": "^3.16.4"
   }
