--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -11,7 +11,9 @@
   },
   "scripts": {
     "fractal": "fractal",
-    "start": "fractal start"
+    "start": "fractal start",
+    "styles:build": "postcss src/components/main.css -o dist/main.css -m --verbose",
+    "styles:watch": "yarn styles:build -w"
   },
   "bugs": {
     "url": "https://github.com/Chapabu/chapabu.codes/issues"
@@ -20,9 +22,14 @@
     "@frctl/fractal": "^1.2.0",
     "@frctl/nunjucks": "^2.0.1",
     "@frctl/twig": "^1.0.0-beta.5",
+    "cssnano": "^4.1.10",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
-    "mono-fractal": "^1.0.0"
+    "mono-fractal": "^1.0.0",
+    "normalize.css": "^8.0.1",
+    "postcss": "^7.0.18",
+    "postcss-cli": "^6.1.3",
+    "postcss-import": "^12.0.1"
   }
 }
