--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -11,10 +11,14 @@
   },
   "scripts": {
     "fractal": "fractal",
-    "start": "fractal start",
+    "fractal:start": "fractal start",
+    "fractal:build": "fractal build",
     "styles:build": "postcss src/components/main.css -o dist/main.css -m --verbose",
     "styles:watch": "yarn styles:build -w"
   },
+  "browserslist": [
+    "defaults"
+  ],
   "bugs": {
     "url": "https://github.com/Chapabu/chapabu.codes/issues"
   },
@@ -30,6 +34,7 @@
     "normalize.css": "^8.0.1",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0"
   }
 }
