--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -23,18 +23,22 @@
     "url": "https://github.com/Chapabu/chapabu.codes/issues"
   },
   "devDependencies": {
+    "@chapabu/stylelint": "^1.0.0",
     "@frctl/fractal": "^1.2.0",
     "@frctl/nunjucks": "^2.0.1",
     "@frctl/twig": "^1.0.0-beta.5",
     "cssnano": "^4.1.10",
-    "eslint": "^6.4.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
     "mono-fractal": "^1.0.0",
     "normalize.css": "^8.0.1",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0"
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^1.18.2",
+    "stylelint": "^10.0.0"
   }
 }
