--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -14,6 +14,7 @@
     "fractal:start": "fractal start",
     "fractal:build": "fractal build",
     "styles:build": "postcss src/components/main.css -o dist/main.css -m --verbose",
+    "styles:lint": "stylelint ./src/**/*.css",
     "styles:watch": "yarn styles:build -w"
   },
   "browserslist": [
