--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -15,7 +15,9 @@
     "fractal:build": "fractal build",
     "styles:build": "postcss src/components/main.css -o dist/main.css -m --verbose",
     "styles:lint": "stylelint ./src/**/*.css",
-    "styles:watch": "yarn styles:build -w"
+    "styles:watch": "yarn styles:build -w",
+    "lint": "run-p *:lint",
+    "build": "npm-run-all lint -p \"!(fractal)*:build\" -s fractal:build"
   },
   "browserslist": [
     "defaults"
@@ -35,6 +37,7 @@
     "eslint-plugin-import": "^2.18.2",
     "mono-fractal": "^1.0.0",
     "normalize.css": "^8.0.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
