--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -17,7 +17,8 @@
     "styles:lint": "stylelint ./src/**/*.css",
     "styles:watch": "yarn styles:build -w",
     "lint": "run-p *:lint",
-    "build": "npm-run-all lint -p \"!(fractal)*:build\" -s fractal:build"
+    "build": "npm-run-all lint -p \"!(fractal)*:build\" -s fractal:build",
+    "start": "run-p *:watch fractal:start"
   },
   "browserslist": [
     "defaults"
