--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "mono-fractal": "^1.0.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.18",
