--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -13,12 +13,13 @@
     "fractal": "fractal",
     "fractal:start": "fractal start",
     "fractal:build": "fractal build",
-    "styles:build": "postcss src/components/main.css -o dist/main.css -m --verbose",
-    "styles:lint": "stylelint ./src/**/*.css",
-    "styles:watch": "yarn styles:build -w",
+    "styles:build": "gulp styles:compile",
+    "styles:lint": "gulp styles:lint",
+    "styles:watch": "gulp styles:watch",
     "lint": "run-p *:lint",
     "build": "npm-run-all lint -p \"!(fractal)*:build\" -s fractal:build",
-    "start": "run-p *:watch fractal:start"
+    "start": "run-p *:watch fractal:start",
+    "gulp": "gulp"
   },
   "browserslist": [
     "defaults"
@@ -36,13 +37,17 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-stylelint": "^9.0.0",
     "mono-fractal": "^1.0.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.18",
     "postcss-cli": "^6.1.3",
-    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
     "stylelint": "^10.0.0"
