Add bourbon and css reset

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/normalize.css"
+      "**/normalize.css",
+      "**/modern-css-reset"
     ]
   },
   "devDependencies": {
