--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "modern-css-reset": "^1.0.4",
+    "prettier": "^1.18.2",
     "sass": "^1.23.1",
     "stylelint": "^10.0.0"
   },
